fix(DropdownList): only show scrollbar if necessary
affects: @entur/dropdown

ISSUES CLOSED: DS-223

--- a/packages/dropdown/src/DropdownList.scss
+++ b/packages/dropdown/src/DropdownList.scss
@@ -9,7 +9,7 @@
   max-height: 50vh;
   padding: 0;
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 100%;
   z-index: $z-indexes-popover;
 
